--- a/yangyi/package.json
+++ b/yangyi/package.json
@@ -1,37 +1,47 @@
 {
-  "name": "yangyi",
-  "version": "0.1.0",
+  "name": "landing-test",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^5.6.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.6.1",
-    "craco-less": "^1.17.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
-  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "umi dev",
+    "build": "umi build",
+    "lint": "eslint --ext .jsx src && npm run lint:style",
+    "lint:style": "stylelint \"src/Home/**/*.less\" --syntax less",
+    "gh-pages": "gh-pages -d dist"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "enquire-js": "^0.2.1",
+    "rc-banner-anim": "^2.1.0",
+    "rc-queue-anim": "^1.6.7",
+    "rc-scroll-anim": "^2.5.6",
+    "rc-texty": "^0.2.0",
+    "rc-tween-one": "^2.2.14",
+    "react-sublime-video": "^0.2.5",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-compat": "^3.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-markdown": "^1.0.0-beta.6",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-tinker": "^0.5.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "gh-pages": "^2.0.1",
+    "husky": "^1.3.1",
+    "pre-commit": "1.x",
+    "stylelint": "^9.4.0",
+    "stylelint-config-prettier": "^4.0.0",
+    "stylelint-config-standard": "^18.0.0",
+    "umi": "^3.0.0",
+    "@umijs/preset-react": "^1.4.5"
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
